i# Change Log

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [unreleased]

 * propagate error as status code
 * support full compression of generated output

## [0.0.3] 2022-01-16

 * use MergeSat 3.2.3 with parallel build fix
 * wrapper supports convenience CLI parameter

## [0.0.2] 2021-12-31

 * adapt efficiency_score to directly relate to score_full_parallel
 * doc: extend README with explanations on scores

## [0.0.1] 2021-12-29

 * use Mac compatible solver release
 * provide SpecSAT.sh to easily execute in isolated venv
 * support to easily archive reports
 * extend available info with cpuinfo
 * support using local tools (mainly for testing)
 * initial variant of the SpecSAT.py tool