@@ -13,6 +13,7 @@ import os
 import platform
 import psutil
 import requests  # downloading
+import resource  # process limits
 import shutil
 import subprocess
 import sys
@@ -100,15 +101,6 @@ def get_container_call(container_id, call, **kwargs):
         full_call = call
     else:
         # Jail with container, if requested
-        log.debug("locals(): %r", locals())
-        log.debug("kwargs.get(cwd): %r", kwargs.get("cwd"))
-        log.debug("cwd in kwargs: %r", "cwd" in kwargs)
-        log.debug("kwargs list: %r", [x for x in kwargs])
-        log.debug(
-            "Using container %s to jail the call (cwd arg: '%s')",
-            container_id,
-            kwargs.get("cwd", "<none>"),
-        )
         cmd_prefix = construct_docker_run_command(
             container_id, work_dir=kwargs.get("cwd", os.getcwd())
         )
@@ -125,17 +117,30 @@ def get_container_call(container_id, call, **kwargs):
     return full_call
 
 
-def run_silently(call, **kwargs):
+def set_hour_timeout():
+    """Set max runtime of the calling process to 3600 seconds."""
+    resource.setrlimit(resource.RLIMIT_CPU, (3600, 3600))
+
+
+def run_silently(container_id, call, **kwargs):
     """Run command, an donly print output in case of failure."""
-    log.debug("Silently executing call %r", call)
+    log.debug("Silently executing call %r (with args %r)", call, kwargs)
+
+    # Jail with container, if requested
+    full_call = get_container_call(container_id=container_id, call=call, **kwargs)
+
     process = subprocess.run(
-        call, **kwargs, stdout=subprocess.PIPE, stderr=subprocess.PIPE
+        full_call,
+        **kwargs,
+        stdout=subprocess.PIPE,
+        stderr=subprocess.PIPE,
+        preexec_fn=set_hour_timeout,
     )
     if process.returncode != 0:
-        log.error("Command %r failed with status %d", call, process.returncode)
+        log.error("Command %r failed with status %d", full_call, process.returncode)
         print("STDOUT: ", process.stdout.decode("utf_8"))
         print("STDERR: ", process.stderr.decode("utf_8"))
-        raise Exception("Failed execution of %r %r", call, kwargs)
+        raise Exception("Failed execution of %r %r", full_call, kwargs)
 
 
 @contextlib.contextmanager
@@ -171,10 +176,19 @@ def get_host_info():
     }
 
 
-def measure_call(call, output_file):
+def measure_call(call, output_file, container_id=None):
     """Run the given command, return measured performance data."""
+    # Jail with container, if requested
+    full_call = get_container_call(container_id=container_id, call=call)
+
     pre_stats = os.times()
-    process = subprocess.run(call, stdout=output_file, stderr=subprocess.DEVNULL)
+    # Note: using a docker jail here reduces the precision of the measurement
+    process = subprocess.run(
+        full_call,
+        stdout=output_file,
+        stderr=subprocess.DEVNULL,
+        preexec_fn=set_hour_timeout,
+    )
     post_stats = os.times()
     return {
         "cpu_time_s": (post_stats[2] + post_stats[3]) - (pre_stats[2] + pre_stats[3]),
@@ -189,8 +203,9 @@ class CNFgenerator(object):
     URL = "https://www.ugr.es/~jgiraldez/download/modularityGen_v2.1.tar.gz"
     VERSION = "modularityGen_v2.1"
 
-    def __init__(self, cxx="g++", tool_location=None):
+    def __init__(self, container_id=None, cxx="g++", tool_location=None):
         self.log = logging.getLogger(self.__class__.__name__)
+        self.container_id = container_id
         self.solver = None
         self.workdir = tempfile.TemporaryDirectory(
             prefix="specsat_solver", dir=os.getcwd()
@@ -230,7 +245,7 @@ class CNFgenerator(object):
     def _build_generator(self, cxx="g++"):
         build_call = [cxx, "-O2", self.sourcefile, "-o", self.generator]  # "-Wall"
         self.log.debug("Building solver with %r", build_call)
-        run_silently(build_call)
+        run_silently(container_id=self.container_id, call=build_call)
 
     def generate(self, output_file, parameter=None):
         self.log.debug(
@@ -262,11 +277,13 @@ class SATsolver(object):
         compiler=None,
         compile_flags=None,
         commit=None,
+        container_id=None,
         mode=None,
         solver_location=None,
     ):
         self.log = logging.getLogger(self.__class__.__name__)
         self.build_command = None
+        self.container_id = container_id
         self.mode = "debug" if mode == "debug" else "release"
         self.solver = None
         self.version = None
@@ -302,12 +319,12 @@ class SATsolver(object):
         self.log.debug("get solver: %r", locals())
         clone_call = ["git", "clone", self.REPO, directory]
         self.log.debug("Cloning solver with: %r", clone_call)
-        run_silently(clone_call)
+        run_silently(container_id=self.container_id, call=clone_call)
         if commit:
             checkout_call = ["git", "reset", "--hard", commit]
             self.log.debug("Select SAT commit %r", checkout_call)
             with pushd(directory):
-                run_silently(checkout_call)
+                run_silently(container_id=self.container_id, call=checkout_call)
 
     def _build_solver(self, compiler=None, compile_flags=None):
         self.build_command = [
@@ -325,7 +342,9 @@ class SATsolver(object):
         self.log.debug(
             "Building solver with: %r in cwd: '%s'", self.build_command, self.solverdir
         )
-        run_silently(self.build_command, cwd=self.solverdir)
+        run_silently(
+            container_id=self.container_id, call=self.build_command, cwd=self.solverdir
+        )
         self.solver = os.path.join(self.solverdir, *self.binary)
 
     def _get_version(self):
@@ -394,8 +413,11 @@ class SATsolver(object):
 
 class Benchmarker(object):
     BASE_WORK_DIR = FAST_WORK_DIR_NAME
+    DOCKER_RUN_PREFIX = []
 
-    def __init__(self, solver, generator, used_user_tools, dump_dir=None):
+    def __init__(
+        self, solver, generator, used_user_tools, container_id=None, dump_dir=None
+    ):
         self.log = logging.getLogger(self.__class__.__name__)
         self.log.debug("Get SAT Solver")
         self.solver = solver
@@ -403,6 +425,7 @@ class Benchmarker(object):
         self.relevant_cores = None
         self.fail_early = False
         self.used_user_tools = used_user_tools
+        self.container_id = container_id
         self.dump_dir = dump_dir
         if self.dump_dir:
             self.dump_dir = os.path.realpath(self.dump_dir)
@@ -538,7 +561,9 @@ class Benchmarker(object):
                     )
 
                     with open(output_path, "w") as output_file:
-                        solve_result = measure_call(solve_call, output_file)
+                        solve_result = measure_call(
+                            solve_call, output_file, container_id=self.container_id
+                        )
                     solve_result["validated"] = None
                     solve_result["conflicts"] = self.solver.get_conflicts_from_log(
                         output_path
@@ -817,6 +842,20 @@ def parse_args():
         "-i", "--iterations", default=1, type=int, help="Re-run a run multiple times"
     )
     parser.add_argument(
+        "-u",
+        "--no-docker",
+        default=False,
+        action="store_true",
+        help="Disable jailing with docker (more accuracy, native execution)",
+    )
+    parser.add_argument(
+        "-R",
+        "--docker-runtime",
+        default=False,
+        action="store_true",
+        help="Jail measurement with docker (independent of build settings)",
+    )
+    parser.add_argument(
         "-n",
         "--nick-name",
         default=None,
@@ -973,7 +1012,7 @@ def write_report(report, args, tarxzdump):
             json.dump(report, f, indent=4, sort_keys=True)
 
 
-def build_tools(args):
+def build_tools(args, container_id=None):
     """Build required tools, report whether user provided tools have been used."""
     generator_location = args.get("generator_location")
     generator_location = (
@@ -990,7 +1029,9 @@ def build_tools(args):
     with pushd(args["work_dir"]):
         log.info("Building CNF generator")
         generator = CNFgenerator(
-            cxx=args.get("generator_cxx"), tool_location=generator_location
+            container_id=container_id,
+            cxx=args.get("generator_cxx"),
+            tool_location=generator_location,
         )
         log.debug(
             "Build generator '%s' with version '%s'",
@@ -1004,6 +1045,7 @@ def build_tools(args):
             compiler=args.get("sat_compiler"),
             compile_flags=args.get("sat_compile_flags"),
             commit=args.get("sat_commit"),
+            container_id=container_id,
             mode=args.get("sat_mode"),
             solver_location=solver_location,
         )
@@ -1107,16 +1149,21 @@ def main():
     zipdump = TarXZDump(args.get("zip"))
 
     log.info("SpecSAT 2021, version %s", VERSION)
-
-    satsolver, generator, used_user_tools = build_tools(args)
-
     log.debug("Starting benchmarking with args: %r", args)
+
+    container_id = None
+    if not args.get("no_docker", True) or args.get("docker_runtime", False):
+        container_id = build_docker_container()
+
+    satsolver, generator, used_user_tools = build_tools(args, container_id=container_id)
+
     output_dir = args.get("dump_dir")
     output_dir = output_dir if output_dir is not None else zipdump.dir()
     benchmarker = Benchmarker(
         solver=satsolver,
         generator=generator,
         used_user_tools=used_user_tools,
+        container_id=container_id if args.get("docker_runtime", False) else None,
         dump_dir=output_dir,
     )
     if zipdump.dir() is not None and zipdump.dir() != output_dir:
